<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modo_juego">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="92dp"
        android:layout_height="65dp"
        android:layout_marginEnd="36dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:onClick="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399"
        app:srcCompat="@drawable/robot_icon_195126" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="104dp"
        android:layout_height="38dp"
        android:text="@string/infinito"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:text="@string/normal"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="111dp"
        android:layout_height="39dp"
        android:text="vs Matrix"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="87dp"
        android:layout_height="63dp"
        android:layout_marginStart="24dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:onClick="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:srcCompat="@drawable/_vs1_logo_2022" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="101dp"
        android:layout_height="64dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:onClick="infinito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397"
        app:srcCompat="@drawable/_959607" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="234dp"
        android:layout_height="55dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="89dp"
        android:text="@string/modo"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/como_jugar"
        android:layout_width="316dp"
        android:layout_height="171dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="8dp"
        android:text="Cada jugador elige las X o las O, y en su turno debe poner una, intentando conseguir 3 seguidas en una línea vertical, horizontal o diagonal. Una vez se llenan todos los espacios se termina la partida, finalizando en tablas si ninguno consigue enlazar tres de sus fichas seguidas"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="136dp"
        android:layout_height="48dp"
        android:clickable="true"
        android:onClick="instrucciones"
        android:text="Como jugar?"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

</androidx.constraintlayout.widget.ConstraintLayout>