<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act_juego">

    <ImageView
        android:id="@+id/tablero"
        android:layout_width="352dp"
        android:layout_height="384dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        app:srcCompat="@drawable/gato__1_" />

    <LinearLayout
        android:layout_width="204dp"
        android:layout_height="76dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/jugador1"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contador_jugador1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="205dp"
        android:layout_height="77dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/jugador2"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contador_jugador2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_flotante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/imagen"
        android:onClick="menus_flotante_mostrar"
        app:backgroundTint="#397F95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <TextView
        android:id="@+id/letra"
        android:layout_width="61dp"
        android:layout_height="41dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/siete"
        android:layout_width="71dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_weight="1"
        android:contentDescription="casilla"
        android:minHeight="48dp"
        android:onClick="jugar"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

    <TextView
        android:id="@+id/cuatro"
        android:layout_width="77dp"
        android:layout_height="81dp"
        android:layout_weight="1"
        android:contentDescription="casilla"
        android:minHeight="48dp"
        android:onClick="jugar"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <TextView
        android:id="@+id/ocho"
        android:layout_width="74dp"
        android:layout_height="68dp"
        android:layout_weight="1"
        android:contentDescription="casilla"
        android:minHeight="48dp"
        android:onClick="jugar"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <TextView
        android:id="@+id/nueve"
        android:layout_width="70dp"
        android:layout_height="76dp"
        android:layout_weight="1"
        android:contentDescription="casilla"
        android:minHeight="48dp"
        android:onClick="jugar"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

    <TextView
        android:id="@+id/seis"
        android:layout_width="76dp"
        android:layout_height="77dp"
        android:layout_weight="1"
        android:contentDescription="casilla"
        android:minHeight="48dp"
        android:onClick="jugar"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <TextView
        android:id="@+id/cinco"
        android:layout_width="79dp"
        android:layout_height="77dp"
        android:layout_weight="1"
        android:contentDescription="casilla"
        android:minHeight="48dp"
        android:onClick="jugar"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <TextView
        android:id="@+id/dos"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:layout_weight="1"
        android:contentDescription="casilla"
        android:minHeight="48dp"
        android:onClick="jugar"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/tres"
        android:layout_width="70dp"
        android:layout_height="76dp"
        android:layout_weight="1"
        android:contentDescription="casilla"
        android:minHeight="48dp"
        android:onClick="jugar"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335" />

    <TextView
        android:id="@+id/uno"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_weight="1"
        android:contentDescription="casilla"
        android:minHeight="48dp"
        android:onClick="jugar"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

</androidx.constraintlayout.widget.ConstraintLayout>